JSW Devsb/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Manager.FirstName  + &apos; &apos;+ Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Kurnool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tirupati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GHMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rest of Telengana</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reports_to__c</fullName>
        <label>Reports to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSO__c</fullName>
        <label>TSO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Technical</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <relationshipName>TSO</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AP_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TSO__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>Employee_Code__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>LOCALE</columns>
        <columns>Jurisdiction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_STATE</field>
            <operation>equals</operation>
            <value>Andhra Pradesh</value>
        </filters>
        <label>AP Active Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>SAP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>SAP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>GGBS_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TSO__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>Employee_Code__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>contains</operation>
            <value>GGBS</value>
        </filters>
        <label>GGBS Active Users</label>
    </listViews>
    <listViews>
        <fullName>Kerala_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TSO__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>Employee_Code__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_STATE</field>
            <operation>equals</operation>
            <value>Kerala</value>
        </filters>
        <label>Kerala Active Users</label>
    </listViews>
    <listViews>
        <fullName>Maharastra_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TSO__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>SAP_Code__c</columns>
        <columns>Employee_Code__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_STATE</field>
            <operation>equals</operation>
            <value>Maharastra</value>
        </filters>
        <label>Maharastra Active Users</label>
    </listViews>
    <listViews>
        <fullName>Tamil_Nadu_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TSO__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>Employee_Code__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_STATE</field>
            <operation>equals</operation>
            <value>Tamil Nadu</value>
        </filters>
        <label>Tamil Nadu Active Users</label>
    </listViews>
    <listViews>
        <fullName>Telangana_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TSO__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>Employee_Code__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_STATE</field>
            <operation>equals</operation>
            <value>Telangana</value>
        </filters>
        <label>Telangana Active Users</label>
    </listViews>
    <listViews>
        <fullName>karnataka_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TSO__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>Employee_Code__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_STATE</field>
            <operation>equals</operation>
            <value>Karnataka</value>
        </filters>
        <label>Karnataka Active Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>